# TFServing-setup-tutorial

./: .gitmodules  FeatureColumns_Turtorial.ipynb  LinearKeras.py  Model4CTRCPU.py  ModelBuilt.py  Model_xla.py  POSTreq.py  README.md  feature_column_tutorial.py  grpcMetadata.py  grpcModelStatus.py  grpcRequest.py  grpcRequestLog.py  grpc_XLA.py  grpctry.py  infer.py  loaded.py  loadjson.py  modelTrain.py  monitor_model.py  outop  run_test.sh  saved_model_cli_tensorrt.py  simpleUser2Vec.py  sparkprocess.py  subclass-template.py  tfrecord_io.py  youtube.ipynb  youtube.py
DataLoader/: Loader.py  TrainFiles.py  __init__.py
batch/: batchpara.config
config/: CTR.config  Toy.config  Vocab.txt  globalpara_toy.npy  server.config  versionctrl.config  versionlabels.config
cpp/: Makefile  README.md  build-cpp-api.sh  client.cc  grpc-cpp-u14-tf15.dockerfile  grpc-cpp-u14.dockerfile  grpc-cpp.dockerfile  prophet-upgrade.dockerfile  prophet.docker  prophet.dockerfile
cpp/cmake/: README.md
cpp/cmake-static-lib/: README.md  build-cpp-api.sh  grpc-cpp-static.dockerfile
cpp/cmake-static-lib/src/cmake-static-lib/: CMakeLists.txt  Makefile
cpp/cmake-static-lib/src/model-metadata/: CMakeLists.txt  main.cc
cpp/cmake-static-lib/src/model-reload/: CMakeLists.txt
cpp/cmake-static-lib/src/model-status/: CMakeLists.txt
cpp/cmake-static-lib/src/module-build/: Makefile  main.cc
cpp/cmake-static-lib/src/predict-log/: CMakeLists.txt
cpp/cmake-static-lib/src/predict-service/: CMakeLists.txt
cpp/cmake/src/model-status/: main.cc
cpp/cmake/src/predict-log/: main.cc
cpp/cmake/src/predict-service/: CMakeLists.txt  main.cc
cpp/make/: README.md
cpp/make-static-lib/: README.md
cpp/make-static-lib/src/model-status/: main.cc
cpp/make-static-lib/src/predict-log/: main.cc
cpp/make-static-lib/src/predict-service/: Makefile
cpp/make/src/model-metadata/: Makefile  main.cc
cpp/make/src/model-reload/: main.cc
cpp/make/src/predict-service/: main.cc
cpp/make/src/tmp/: Makefile
cpp/src/: main.cc
cpp/src/build-with-a-file/: Makefile  main.cc
cpp/src/model-metadata/: Makefile  main.cc
cpp/src/model-reload/: CMakeLists.txt  main.cc
cpp/src/model-status/: CMakeLists.txt
cpp/src/module-build/: CMakeLists.txt  README.md
cpp/src/module-build/include/tensorflow/core/example/: example.pb.h  example_parser_configuration.grpc.pb.h  feature.grpc.pb.h
cpp/src/module-build/include/tensorflow/core/framework/: attr_value.pb.h  device_attributes.grpc.pb.h  device_attributes.pb.h  function.grpc.pb.h  op_def.grpc.pb.h  reader_base.pb.h  step_stats.grpc.pb.h  summary.grpc.pb.h  versions.grpc.pb.h
cpp/src/module-build/include/tensorflow/core/protobuf/: bfc_memory_map.pb.h  control_flow.grpc.pb.h  conv_autotuning.pb.h  critical_section.grpc.pb.h  debug.pb.h  device_properties.pb.h  master_service.grpc.pb.h  named_tensor.grpc.pb.h  replay_log.pb.h  saved_model.grpc.pb.h  tensorflow_server.pb.h  verifier_config.grpc.pb.h  worker.grpc.pb.h
cpp/src/module-build/include/tensorflow_serving/apis/: input.pb.h
cpp/src/module-build/include/tensorflow_serving/config/: log_collector_config.pb.h
cpp/src/module-build/include/tensorflow_serving/util/: class_registration_test.pb.h  status.pb.h
cpp/src/predict-log/: main.cc
cpp/src/predict-service/: main.cc
cpp/src/static-lib/: Makefile
cpp/src/tmp/: main.cc
data/: toy.csv  valid_1000.csv
go/: README.md  grpcgo.dockerfile  protoc.sh
go/pkg/sumdb/sum.golang.org/: latest
go/src/: basic-run-env.sh  build-api.sh  env.sh  go.mod  go.sum  main.go  protoc.go  protoc.sh  run.sh  version-label-test.sh
go/src/main/: main.go  model-reload.go  model-status.go  predict-log.go  predict-model-metadata.go  predict-service.go  predict_example.go
go/src/proto/tensorflow/serving/: class_registration_test.pb.go  classification.pb.go  file_system_storage_path_source.pb.go  get_model_metadata.pb.go  get_model_status.pb.go  (+20 more)
go/src/tfserving_apis/: log.go  predict.go
go/src/utils/: log.go  model.go  predictRequest.go  request.go  utils.go
goframe/: buildenv.sh  env.sh  run.sh
goframe/src/gopath/: com.sh
goframe/src/main/: main.go
goframe/src/utils/: utils.go
logs/20200312-175108/train/: events.out.tfevents.1584006668.bogon.30366.1683.v2  events.out.tfevents.1584006679.bogon.profile-empty
logs/20200312-175108/validation/: events.out.tfevents.1584006687.bogon.30366.6426.v2
model/: LinearKerasV2.py  LogisticKeras.py  ModelBuilt.py
monitor/: monitor.config
monitor/prometheus/: prome.yaml
python/: POSTreq.py  README.md  grpcMetadata.py  grpcModelpara.py  grpcReloadModel.py  grpcRequest.py  grpcRequestLog.py
records/Example/Nolabel/: part-r-00000.tfrecords  part-r-00001.tfrecords
records/Example/Test/: test_0.tfrecord  test_1.tfrecord
request/: a_100.json  a_100_toy.json  a_200.json  a_gRPC_100.json  a_gRPC_200.json
save/CTR/1/: saved_model.pb
save/CTR/1/variables/: variables.index
save/CTR_XLA/1/: saved_model.pb
save/CTR_XLA/1/variables/: variables.data-00000-of-00001  variables.index
save/CTR_tensorRT/1/: saved_model.pb
save/CTR_tensorRT/1/variables/: variables.data-00000-of-00001  variables.data-00000-of-00002  variables.data-00001-of-00002  variables.index
save/FC/1/: saved_model.pb
save/FC/1/variables/: variables.data-00000-of-00001  variables.index
save/Toy/1/: saved_model.pb
save/Toy/1/variables/: variables.data-00000-of-00001  variables.index
save/Toy/2/: saved_model.pb
save/Toy/2/variables/: variables.data-00000-of-00001  variables.index
save/Toy/3/: saved_model.pb
save/Toy/3/variables/: variables.data-00000-of-00001  variables.index
save/Toy_double/1/: saved_model.pb
save/Toy_double/1/variables/: variables.data-00000-of-00001  variables.index
save/Toy_double_xla/1/: saved_model.pb
save/Toy_double_xla/1/variables/: variables.data-00000-of-00001  variables.index
save/monitor/1/: saved_model.pb
save/monitor/1/variables/: variables.data-00000-of-00001  variables.index
useless/: Model4CTR.py  Model4CTRMutiGPU.py  feature_column_tutorial.py  grpctry.py  nvidiaMonitor.py  testJson_gen.py
(+277 files in other folders)
